2004-04-22  Ted Gould  <ted@gould.cx>

	* src/draw-context.cpp, src/dropper-context.cpp,
	src/dyna-draw-context.cpp, src/node-context.cpp, src/nodepath.cpp,
	src/sp-ellipse.cpp, src/sp-offset.cpp, src/sp-path.cpp,
	src/sp-polygon.cpp, src/sp-shape.cpp, src/splivarot.cpp, src/toolbox.cpp,
	src/display/curve.cpp, src/display/nr-arena-shape.cpp,
	src/extension/internal/gnome.cpp, src/extension/internal/ps.cpp,
	src/libnr/nr-path.cpp, src/libnr/nr-path.h,
	src/libnrtype/nr-rasterfont.cpp, src/libnrtype/nr-type-ft2.cpp,
	src/libnrtype/nr-type-gnome.cpp, src/libnrtype/nr-type-w32.cpp,
	src/libnrtype/nr-typeface.cpp, src/livarot/PathCutting.cpp,
	src/svg/gnome-canvas-bpath-util.cpp, src/svg/svg-path.cpp:

	Changing the ART_ enums to NR_ so that if libart is include (like if
	you are building gnome-print) it doesn't conflict with the internal
	definitions.

	* share/extensions/svgz_output.inkmod, src/extension/extension.cpp,
	src/extension/init.cpp, src/extension/implementation/script.cpp:

	Adding in a little more checking code.  Now extensions can start
	deleting themseleves if they fail certain tests.  More tests are
	needed, along with more testing of this feature.  Consider this
	an 'early release' of the feature. ;)

2004-04-22  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/Makefile.am: Make non-recursive.  Now sources */Makefile_insert.
	  See HACKING or discussion on mailing list.
	* autogen.sh: Bump requirement from automake-1.6 to automake-1.7.
	* configure.in: Don't generate src/blah/Makefile, but do generate
	  src/blah/makefile.
	* src/*/Makefile.am: Remove.
	* src/*/makefile.in: New wrapper makefiles to allow typing `make' from
	  subdirectories of src.  (Not used by compiles started from top-level
	  or from src/.)

2004-04-21  MenTaLguY <mental@rydia.net>

	* src/libnrtype/nr-type-w32.h: fixed unremoved underscores

	* src/select-context.cpp, src/selection.cpp, src/selection.h,
	  src/seltrans.cpp, src/tools-switch.cpp, src/dialogs/align.cpp: