@@ -1,3 +1,10 @@
+2004-04-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-polygon.cpp:
+	* src/splivarot.cpp:
+	* src/style.cpp:
+	Change include stringstream.h to include svg/stringstream.h.
+
 2004-04-22  Ted Gould  <ted@gould.cx>
 
 	* src/draw-context.cpp, src/dropper-context.cpp,
